--- a/pathfind_client/index.html
+++ b/pathfind_client/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <div id="ctrl">
+	  <span>
 	  <span><label>起点</label><input id="start_coor_lo"></input><input id="start_coor_la"></input></span>
 	  <span><label>终点</label><input id="end_coor_lo"></input><input id="end_coor_la"></input></span>
-	  <span id="mouse-position"></span>
 	  <span> <button id="btnroute">查询</button></span>
+	  <span id="feature-info"></span>
+	  </span>
 	</div>
+	<span id="mouse-position"></span>
     <div id="map"></div>
     <script type="module" src="./main.js"></script>
   </body>
