两条线路同时显示

--- a/pathfind_client/index.html
+++ b/pathfind_client/index.html
@@ -12,10 +12,12 @@
 	  <span><label>起点</label><input id="start_coor_lo"></input><input id="start_coor_la"></input></span>
 	  <span><label>终点</label><input id="end_coor_lo"></input><input id="end_coor_la"></input></span>
 	  <span> <button id="btnroute">查询</button></span>
+	  <span> <button id="clrroute">清除</button></span>
 	  <span>
 	  <select id='modesel'>
 	  <option value='0'>默认</option>
       <option value='1'>自定义</option>
+	  <option value='2'>对比</option>
       </select></span>
 	  <span id="feature-info"></span>
 	  </span>
