自定义权重

--- a/pathfind_client/index.html
+++ b/pathfind_client/index.html
@@ -19,6 +19,7 @@
       <option value='1'>自定义</option>
 	  <option value='2'>对比</option>
       </select></span>
+	  <span>主路权重<input type="range" min="0" max="10" id='mainCoef' /></span>
 	  <span id="feature-info"></span>
 	  </span>
 	</div>
