--- a/pathfind_client/index.html
+++ b/pathfind_client/index.html
@@ -20,6 +20,7 @@
 	  <option value='2'>对比</option>
       </select></span>
 	  <span>主路权重<input type="range" min="0" max="10" id='mainCoef' /></span>
+	  <span>车速<input type="range" min="0" max="130" id="speedRange"/>
 	  <span id="feature-info"></span>
 	  </span>
 	</div>
