--- a/pathfind_client/index.html
+++ b/pathfind_client/index.html
@@ -21,8 +21,10 @@
       </select></span>
 	  <span>主路权重<input type="range" min="0" max="10" id='mainCoef' /></span>
 	  <span>车速<input type="range" min="0" max="130" id="speedRange"/>
-	  <span id="feature-info"></span>
 	  </span>
+	</div>
+	<div>
+	  <span id="feature-info"></span>
 	</div>
 	<span id="mouse-position"></span>
     <div id="map"></div>
