--- a/pathfind_client/index.html
+++ b/pathfind_client/index.html
@@ -20,7 +20,8 @@
 	  <option value='2'>对比</option>
       </select></span>
 	  <span>主路权重<input type="range" min="0" max="10" id='mainCoef' /></span>
-	  <span>车速<input type="range" min="0" max="130" id="speedRange"/>
+	  <!--<span>坡度<input type="range" min="-60" max="60" id="slopeInput"/>-->
+	  <span>使用坡度<input type='checkbox' id='useEleInput'/></span>
 	  </span>
 	</div>
 	<div>
