--- a/pathfind_client/index.html
+++ b/pathfind_client/index.html
@@ -11,7 +11,9 @@
 	  <span>
 	  <span><label>起点</label><input id="start_coor_lo"></input><input id="start_coor_la"></input></span>
 	  <span><label>终点</label><input id="end_coor_lo"></input><input id="end_coor_la"></input></span>
-	  <span> <button id="btnroute">查询</button></span>
+	  <span> <button id="btnroute">汽车</button></span>
+	  <span> <button id="btnbike">自行车</button></span>
+	  <span> <button id="btnfoot">步行</button></span>
 	  <span> <button id="clrroute">清除</button></span>
 	  <span>
 	  <select id='modesel'>
